Nam/.antlr/BKOOLParser.py
# Generated from c:\Users\baonguyen\Desktop\BKOOL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'extends'", "'class'", "'then'", "'nil'", 
                     "'break'", "'continue'", "'for'", "'this'", "'if'", 
                     "'new'", "'do'", "'to'", "'else'", "'downto'", "'float'", 
                     "'string'", "'int'", "'void'", "'static'", "'final'", 
                     "'return'", "'boolean'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "':'", "';'", "','", "'+'", "'-'", "'*'", 
                     "'\\'", "'/'", "'%'", "'=='", "'!='", "'>'", "'>='", 
                     "'<'", "'<='", "'||'", "'&&'", "'^'", "'!'", "'.'", 
                     "':='", "'='" ]

    symbolicNames = [ "<INVALID>", "EXTENDSTA", "CLS1", "THENSTA", "NILSTA", 
                      "BREAKSTA", "CONTISTA", "FORSTA", "THISS", "IFSTA", 
                      "NEWS", "DOSTA", "TOS", "ELSES", "DOWNTOS", "FLOATTYPE", 
                      "STRINGTYPE", "INTTYPE", "VOIDTYPE", "STAT", "FINA", 
                      "RETU", "BOOLEANS", "LB", "RB", "LP", "RP", "LS", 
                      "RS", "COLO", "SEMI", "COMMA", "ADD", "SUB", "MUL", 
                      "DIV", "FDIV", "MOD", "EQUAL", "NEQUA", "GT", "GTE", 
                      "LT", "LTE", "OR1", "AND1", "CONC", "NOT1", "DOT", 
                      "ASSG", "ASSG1", "BOOLLIT", "STRLIT", "ID", "FLOATLIT", 
                      "INTLIT", "CMTS", "CMT", "WS", "ERROR_CHAR", "UNCLOSE_STRING1", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class1 = 1
    RULE_extend1 = 2
    RULE_members = 3
    RULE_static1 = 4
    RULE_instance1 = 5
    RULE_attribute1 = 6
    RULE_method1 = 7
    RULE_listpara = 8
    RULE_listmethod = 9
    RULE_typeins1 = 10
    RULE_typefunc = 11
    RULE_arrtype = 12
    RULE_literal1 = 13
    RULE_arrlist = 14
    RULE_listins = 15
    RULE_expfull = 16
    RULE_stmt = 17
    RULE_block1 = 18
    RULE_body1 = 19
    RULE_decl = 20
    RULE_assignsta = 21
    RULE_lhs = 22
    RULE_ifstate = 23
    RULE_forstate = 24
    RULE_contista = 25
    RULE_breaksta = 26
    RULE_method2 = 27
    RULE_return1 = 28
    RULE_exp0 = 29
    RULE_exp1 = 30
    RULE_exp2 = 31
    RULE_exp3 = 32
    RULE_exp4 = 33
    RULE_exp5 = 34
    RULE_exp6 = 35
    RULE_exp7 = 36
    RULE_exp8 = 37
    RULE_exp9 = 38
    RULE_exp10 = 39
    RULE_exp11 = 40
    RULE_exp12 = 41
    RULE_listexp = 42

    ruleNames =  [ "program", "class1", "extend1", "members", "static1", 
                   "instance1", "attribute1", "method1", "listpara", "listmethod", 
                   "typeins1", "typefunc", "arrtype", "literal1", "arrlist", 
                   "listins", "expfull", "stmt", "block1", "body1", "decl", 
                   "assignsta", "lhs", "ifstate", "forstate", "contista", 
                   "breaksta", "method2", "return1", "exp0", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "exp10", "exp11", "exp12", "listexp" ]

    EOF = Token.EOF
    EXTENDSTA=1
    CLS1=2
    THENSTA=3
    NILSTA=4
    BREAKSTA=5
    CONTISTA=6
    FORSTA=7
    THISS=8
    IFSTA=9
    NEWS=10
    DOSTA=11
    TOS=12
    ELSES=13
    DOWNTOS=14
    FLOATTYPE=15
    STRINGTYPE=16
    INTTYPE=17
    VOIDTYPE=18
    STAT=19
    FINA=20
    RETU=21
    BOOLEANS=22
    LB=23
    RB=24
    LP=25
    RP=26
    LS=27
    RS=28
    COLO=29
    SEMI=30
    COMMA=31
    ADD=32
    SUB=33
    MUL=34
    DIV=35
    FDIV=36
    MOD=37
    EQUAL=38
    NEQUA=39
    GT=40
    GTE=41
    LT=42
    LTE=43
    OR1=44
    AND1=45
    CONC=46
    NOT1=47
    DOT=48
    ASSG=49
    ASSG1=50
    BOOLLIT=51
    STRLIT=52
    ID=53
    FLOATLIT=54
    INTLIT=55
    CMTS=56
    CMT=57
    WS=58
    ERROR_CHAR=59
    UNCLOSE_STRING1=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def class1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Class1Context)
            else:
                return self.getTypedRuleContext(BKOOLParser.Class1Context,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.class1()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLS1):
                    break

            self.state = 91
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLS1(self):
            return self.getToken(BKOOLParser.CLS1, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def extend1(self):
            return self.getTypedRuleContext(BKOOLParser.Extend1Context,0)


        def members(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MembersContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MembersContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class1




    def class1(self):

        localctx = BKOOLParser.Class1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(BKOOLParser.CLS1)
            self.state = 94
            self.match(BKOOLParser.ID)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDSTA:
                self.state = 95
                self.extend1()


            self.state = 98
            self.match(BKOOLParser.LP)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.STRINGTYPE) | (1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.VOIDTYPE) | (1 << BKOOLParser.STAT) | (1 << BKOOLParser.FINA) | (1 << BKOOLParser.BOOLEANS) | (1 << BKOOLParser.ID))) != 0):
                self.state = 99
                self.members()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Extend1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTENDSTA(self):
            return self.getToken(BKOOLParser.EXTENDSTA, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_extend1




    def extend1(self):

        localctx = BKOOLParser.Extend1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_extend1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(BKOOLParser.EXTENDSTA)
            self.state = 108
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute1(self):
            return self.getTypedRuleContext(BKOOLParser.Attribute1Context,0)


        def method1(self):
            return self.getTypedRuleContext(BKOOLParser.Method1Context,0)


        def instance1(self):
            return self.getTypedRuleContext(BKOOLParser.Instance1Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_members




    def members(self):

        localctx = BKOOLParser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_members)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.attribute1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.method1()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.instance1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Static1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAT(self):
            return self.getToken(BKOOLParser.STAT, 0)

        def FINA(self):
            return self.getToken(BKOOLParser.FINA, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_static1




    def static1(self):

        localctx = BKOOLParser.Static1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_static1)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(BKOOLParser.STAT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(BKOOLParser.FINA)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(BKOOLParser.STAT)
                self.state = 118
                self.match(BKOOLParser.FINA)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.match(BKOOLParser.FINA)
                self.state = 120
                self.match(BKOOLParser.STAT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instance1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typefunc(self):
            return self.getTypedRuleContext(BKOOLParser.TypefuncContext,0)


        def listins(self):
            return self.getTypedRuleContext(BKOOLParser.ListinsContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_instance1




    def instance1(self):

        localctx = BKOOLParser.Instance1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instance1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.typefunc()
            self.state = 124
            self.listins()
            self.state = 125
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def static1(self):
            return self.getTypedRuleContext(BKOOLParser.Static1Context,0)


        def typefunc(self):
            return self.getTypedRuleContext(BKOOLParser.TypefuncContext,0)


        def listins(self):
            return self.getTypedRuleContext(BKOOLParser.ListinsContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_attribute1




    def attribute1(self):

        localctx = BKOOLParser.Attribute1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.static1()
            self.state = 128
            self.typefunc()
            self.state = 129
            self.listins()
            self.state = 130
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def block1(self):
            return self.getTypedRuleContext(BKOOLParser.Block1Context,0)


        def typefunc(self):
            return self.getTypedRuleContext(BKOOLParser.TypefuncContext,0)


        def listpara(self):
            return self.getTypedRuleContext(BKOOLParser.ListparaContext,0)


        def STAT(self):
            return self.getToken(BKOOLParser.STAT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_method1




    def method1(self):

        localctx = BKOOLParser.Method1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STAT:
                    self.state = 132
                    self.match(BKOOLParser.STAT)


                self.state = 135
                self.typefunc()


            self.state = 138
            self.match(BKOOLParser.ID)
            self.state = 139
            self.match(BKOOLParser.LB)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.STRINGTYPE) | (1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.VOIDTYPE) | (1 << BKOOLParser.BOOLEANS) | (1 << BKOOLParser.ID))) != 0):
                self.state = 140
                self.listpara()


            self.state = 143
            self.match(BKOOLParser.RB)
            self.state = 144
            self.block1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListparaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typefunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.TypefuncContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.TypefuncContext,i)


        def listmethod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ListmethodContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ListmethodContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.SEMI)
            else:
                return self.getToken(BKOOLParser.SEMI, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_listpara




    def listpara(self):

        localctx = BKOOLParser.ListparaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listpara)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.typefunc()
            self.state = 147
            self.listmethod()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.SEMI:
                self.state = 148
                self.match(BKOOLParser.SEMI)
                self.state = 149
                self.typefunc()
                self.state = 150
                self.listmethod()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListmethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def listmethod(self):
            return self.getTypedRuleContext(BKOOLParser.ListmethodContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listmethod




    def listmethod(self):

        localctx = BKOOLParser.ListmethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listmethod)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(BKOOLParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(BKOOLParser.ID)
                self.state = 159
                self.match(BKOOLParser.COMMA)
                self.state = 160
                self.listmethod()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typeins1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGTYPE(self):
            return self.getToken(BKOOLParser.STRINGTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(BKOOLParser.FLOATTYPE, 0)

        def INTTYPE(self):
            return self.getToken(BKOOLParser.INTTYPE, 0)

        def BOOLEANS(self):
            return self.getToken(BKOOLParser.BOOLEANS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_typeins1




    def typeins1(self):

        localctx = BKOOLParser.Typeins1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typeins1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.STRINGTYPE) | (1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.BOOLEANS) | (1 << BKOOLParser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypefuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeins1(self):
            return self.getTypedRuleContext(BKOOLParser.Typeins1Context,0)


        def arrtype(self):
            return self.getTypedRuleContext(BKOOLParser.ArrtypeContext,0)


        def VOIDTYPE(self):
            return self.getToken(BKOOLParser.VOIDTYPE, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_typefunc




    def typefunc(self):

        localctx = BKOOLParser.TypefuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_typefunc)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.typeins1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.arrtype()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.match(BKOOLParser.VOIDTYPE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeins1(self):
            return self.getTypedRuleContext(BKOOLParser.Typeins1Context,0)


        def LS(self):
            return self.getToken(BKOOLParser.LS, 0)

        def exp0(self):
            return self.getTypedRuleContext(BKOOLParser.Exp0Context,0)


        def RS(self):
            return self.getToken(BKOOLParser.RS, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_arrtype




    def arrtype(self):

        localctx = BKOOLParser.ArrtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.typeins1()
            self.state = 171
            self.match(BKOOLParser.LS)
            self.state = 172
            self.exp0()
            self.state = 173
            self.match(BKOOLParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKOOLParser.INTLIT, 0)

        def BOOLLIT(self):
            return self.getToken(BKOOLParser.BOOLLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKOOLParser.FLOATLIT, 0)

        def STRLIT(self):
            return self.getToken(BKOOLParser.STRLIT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_literal1




    def literal1(self):

        localctx = BKOOLParser.Literal1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_literal1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLLIT) | (1 << BKOOLParser.STRLIT) | (1 << BKOOLParser.FLOATLIT) | (1 << BKOOLParser.INTLIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def literal1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Literal1Context)
            else:
                return self.getTypedRuleContext(BKOOLParser.Literal1Context,i)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_arrlist




    def arrlist(self):

        localctx = BKOOLParser.ArrlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_arrlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(BKOOLParser.LP)
            self.state = 178
            self.literal1()
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 179
                self.match(BKOOLParser.COMMA)
                self.state = 180
                self.literal1()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 186
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListinsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def expfull(self):
            return self.getTypedRuleContext(BKOOLParser.ExpfullContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def listins(self):
            return self.getTypedRuleContext(BKOOLParser.ListinsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listins




    def listins(self):
